@startuml
class Matrix {
   flightNumber : Integer
   departureTime : Date
   Getall()
}

class CompetencesCell{
MaxLevel : level
}

class OutcomeGroup{
Level:Level
}


Matrix --> "*" Architecture

Architecture --> "*" CompetencesCell
CompetencesCell  --> "4 levels" OutcomeGroup
OutcomeGroup --> "*" OutcomeResult
OutcomeResult "1"<-- OutcomeResultCollection
OutcomeResultCollection --> "1" AssignmentRubric

Matrix --> "1" AssignmentRubric

@enduml

